# p2p-chat

./: .gitignore  README.md  main.py  nds.py  nds_serve.py  pyproject.toml  ruff.toml  ui.py
client/: chatapp.tcss  groups.db  main.py  messages.db  pyproject.toml  stopwatch.tcss  ui.py
client/modules/service/: get_ip.py  server.py
client/modules/service/tests/: test_server.py
client/modules/ui/: structs.py  ui.py
client/modules/ui/Chat/: main.py
client/modules/ui/Networks/: add_discovery_source.py  create_group.py  main.py
client/modules/ui/components/Chat/: main.py
client/modules/ui/components/Discovery/: main.py  (+1 more)
client/nds/: nds.py
client/nds/tests/: test_node_discover.py
client/protos/: health.proto  health_pb2_grpc.py  network.proto  network_pb2.py  network_pb2_grpc.py  peer.proto  peer_pb2.py  peer_pb2_grpc.py
client/service/: __init__.py  crawler.py  get_ip.py  heartbeat.py  leader_election.py  messaging.py  overseer.py  server.py  state.py  synchronization.py
client/service/tests/: test_server.py
client/structs/: __init__.py  client.py  generic.py  nds.py  structs.py
client/ui/: __init__.py  ui.py
client/ui/Chat/: main.py
client/ui/Networks/: add_discovery_source.py  main.py
groupchat/: hello.py  pyproject.toml
nds/: main.py  pyproject.toml
nds/protos/: health_pb2.py  health_pb2_grpc.py  network.proto  network_pb2.py  network_pb2_grpc.py
nds/structs/: __init__.py  structs.py
nds/tests/: test_node_discover.py
node/: main.py  pyproject.toml
structs/: client.py  generic.py  nds.py
tests/: test_node_discover.py
(+1 files in other folders)
