[project]
name = "p2p-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "textual>=0.86.1",
  "gevent>=24.11.1",
  "tinyrpc>=1.1.7",
  "werkzeug>=3.1.3",
  "requests>=2.32.3",
  "sqlitedict>=2.1.0",
  "asyncio-gevent>=0.2.0",
  "munch>=4.0.0",
]

[dependency-groups]
dev = ["pytest>=8.3.3", "textual-dev>=1.6.1"]
