[project]
name = "nds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gevent>=24.11.1",
    "grpcio-tools>=1.67.1",
    "grpcio>=1.67.1",
    "requests>=2.32.3",
    "sqlitedict>=2.1.0",
    "tinyrpc>=1.1.7",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
